--- a/style.css
+++ b/style.css
@@ -1,5 +1,27 @@
+@font-face {
+    font-family: 'Metropolis';
+    src: url('../Fonts/Metropolis-Regular.woff2') format('woff2'),
+         url('../Fonts/Metropolis-Regular.woff') format('woff'),
+         url('../Fonts/Metropolis-Regular.ttf') format('truetype')
+  }
+
+* {
+    font-family: 'Metropolis';
+}
+
+#header {
+    background-color: rgb(190, 190, 190)
+}
+
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
     padding: 8px;
+}
+
+tr:nth-child(even) {background: rgb(255, 255, 255)}
+tr:nth-child(odd) {background: rgb(231, 231, 231)}
+
+.tag {
+    background-color:rgb(249, 255, 186)
 }
